--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+html,
+body {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#renderCanvas {
+  width: 100vw;
+  height: 100vh;
+  touch-action: none;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -65,21 +80,6 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
-
-html,
-body {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#renderCanvas {
-  width: 100%;
-  height: 100%;
-  touch-action: none;
 }
 
 #display-fps {
